add swagger doc to reviews endpoints
